--- a/styles.css
+++ b/styles.css
@@ -21,22 +21,22 @@ body {
 
 /* Header */
 header {
-  background-color: #343a40;
+  background-color: #fff;
   padding: 30px 0;
 }
 
 header h1 {
-  color: #fff;
+  color: #333;
 }
 
 header nav a {
-  color: #fff;
+  color: #333;
   text-decoration: none;
   margin: 0 20px;
 }
 
 header nav a:hover {
-  color: #3498db; /* Changed hover color to a user-friendly blue */
+  color: #f39c12; /* Changed hover color to match the new text color */
 }
 
 /* Hero Section */
@@ -50,18 +50,14 @@ header nav a:hover {
   font-size: 4rem;
   font-weight: 700;
   margin-bottom: 20px;
-  color: #3498db; /* Updated color to a vibrant blue */
+  color: #3498db;
 }
 
 .hero-description {
   font-size: 1.5rem;
   font-weight: 300;
   margin-bottom: 30px;
-  color: #fff; /* Keep it white for contrast */
-}
-
-.hero-description .highlight {
-  color: #1abc9c;
+  color: #f39c12; /* Updated text color */
 }
 
 /* Logo size adjustments */
@@ -87,7 +83,8 @@ header nav a:hover {
 
 .tools-card {
   text-align: center;
-  width: 220px;
+  width: 200px;
+  margin-bottom: 40px;
 }
 
 .tools-card img {
@@ -97,9 +94,10 @@ header nav a:hover {
 }
 
 .tools-card h4 {
-  font-size: 1.4rem;
-  font-weight: 500;
+  font-size: 1.2rem;
+  font-weight: 600;
   margin-bottom: 10px;
+  color: #f39c12;
 }
 
 .tools-card p {
@@ -110,28 +108,25 @@ header nav a:hover {
 
 /* Footer styles */
 footer {
-  background-color: #343a40;
-  color: #fff;
+  background-color: #fff;
+  color: #333;
   padding: 30px 0;
 }
 
+footer a {
+  color: #f39c12;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: #ff6347; /* A different color for the footer links on hover */
+}
+
 .footer-logo-container {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .footer-logo {
   max-width: 100px;
   height: auto;
-}
-
-footer p {
-  font-size: 14px;
-}
-
-footer a {
-  color: #3498db; /* Updated to match header color */
-}
-
-footer a:hover {
-  text-decoration: underline;
 }
