--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
   position: relative;
   background-color: #1d1f23;
   color: white;
-  background-image: url('images/background_image.jpg');
+  background-image: url('images/background.png');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
