--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,15 @@
   padding: 0;
   box-sizing: border-box;
 }
-        .logo {
-    width: 340px;
-    height: auto;
+
+.logo {
+  width: 340px;
+  height: auto;
 }
-        .logo img {
-            width="10%";
-        
-    }
+
+.logo img {
+  width: 10%;
+}
 
 body {
   font-family: 'Poppins', sans-serif;
@@ -21,7 +22,7 @@ body {
   position: relative;
   background-color: #1d1f23;
   color: white;
-  background-image: url('images/background.png');
+  background-image: url('images/background.png'); /* Updated background image path */
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
